--- a/index.html
+++ b/index.html
@@ -5,9 +5,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     
+    <header>
+        <div class="menu-side">
+            <h1>Playlist</h1>
+            <div class="playlist">
+                <h4 class="active"><span></span><i class="bi bi-music-note-beamed"></i> Playlist</h4>
+                <h4><span></span><i class="bi bi-music-note-beamed"></i> Last Listening</h4>
+                <h4><span></span><i class="bi bi-music-note-beamed"></i> Recommended</h4>
+            </div>
+            <div class="menu-song">
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/1.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="1"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+
+                <li class="songItem">
+                    <span>01</span>
+                    <img src="./img/2.jpg" alt="">
+                    <h5>On My Way <br>
+                        <div class="subtitle">Alan Walker</div>
+                    </h5>
+                    <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                </li>
+                
+            </div>
+        </div>
+        <div class="song-side"></div>
+        <div class="master-play"></div>
+    </header>
+
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
