--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <span>01</span>
                     <img src="./img/1.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="1"></i>
                 </li>
@@ -31,7 +31,7 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
@@ -40,7 +40,7 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
@@ -49,7 +49,7 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
@@ -58,7 +58,7 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
@@ -67,7 +67,7 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
@@ -76,7 +76,7 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
@@ -85,7 +85,7 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
@@ -94,7 +94,7 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
@@ -103,15 +103,48 @@
                     <span>01</span>
                     <img src="./img/2.jpg" alt="">
                     <h5>On My Way <br>
-                        <div class="subtitle">Alan Walker</div>
+                        <div class="artist">Alan Walker</div>
                     </h5>
                     <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
                 </li>
                 
             </div>
         </div>
+
         <div class="song-side"></div>
-        <div class="master-play"></div>
+
+        <div class="master-play">
+            <div class="wave">
+                <div class="wave1"></div>
+                <div class="wave1"></div>
+                <div class="wave1"></div>
+            </div>
+            <img src="./img/20.jpg" alt="" id="poster-master-play">
+            <h5 id="title">
+                Vande Mataram
+                <div class="artist">Bankim Chandra</div>
+            </h5>
+            <div class="icon">
+                <i class="bi shuffle bi-music-note-beamed">next</i>
+                <i class="bi bi-skip-start-fill"></i>
+                <i class="bi bi-play-fill"></i>
+                <i class="bi bi-skip-end-fill"></i>
+                <i class="bi bi-cloud-arrow-down-fill" id="download-music"></i>
+            </div>
+            <span id="currentStart">0.00</span>
+            <div class="bar">
+                <input type="range" id="seek" min="0" max="100">
+                <div class="bar2" id="bar2"></div>
+                <div class="dot"></div>
+            </div>
+            <span id="currentEnd">0.30</span>
+            <div class="vol">
+                <i class="bi bi-volume-down-fill" id="vol-icon"></i>
+                <input type="range" min="0" max="100" id="vol">
+                <div class="vol-bar"></div>
+                <div class="dot" id="vol-dot"></div>
+            </div>
+        </div>
     </header>
 
     <script src="script.js"></script>
