--- a/index.html
+++ b/index.html
@@ -111,7 +111,22 @@
             </div>
         </div>
 
-        <div class="song-side"></div>
+        <div class="song-side">
+            <nav>
+                <ul>
+                    <li>DISCOVERY <span></span></li>
+                    <li>MY LIBRARY</li>
+                    <li>RADIO</li>
+                </ul>
+                <div class="search">
+                    <i class="bi bi-search"></i>
+                    <input type="text" placeholder="Search Music...">
+                </div>
+                <div class="user">
+                    <img src="./img/blue_eyes_purple_hair_satoru_gojo_sunglasses_hd_jujutsu_kaisen-2560x1440.jpg" alt="">
+                </div>
+            </nav>
+        </div>
 
         <div class="master-play">
             <div class="wave">
