--- a/index.html
+++ b/index.html
@@ -126,6 +126,131 @@
                     <img src="./img/blue_eyes_purple_hair_satoru_gojo_sunglasses_hd_jujutsu_kaisen-2560x1440.jpg" alt="">
                 </div>
             </nav>
+
+            <div class="content">
+                <h1>Alan Walker-Fade</h1>
+                <p>You were the shadow to my light did you feel us Another start you fade <br> Away afraid our aim is out of sight wanna see us Alive</p>
+                <div class="buttons">
+                    <button>PLAY</button>
+                    <button>FOLLOW</button>
+                </div>
+            </div>
+
+            <div class="popular-song">
+                <div class="h4">
+                    <h4>Popular Song</h4>
+                    <div class="btn-song">
+                        <i class="bi bi-arrow-left-short"></i>
+                        <i class="bi bi-arrow-right-short"></i>
+                    </div>
+                </div>
+                <div class="pop-song">
+
+                    <li class="songItem">
+                        <div class="img-play">
+                            <img src="./img/2.jpg" alt="">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                        </div>
+                        <h5>On My Way<br>
+                            <div class="artist">Alan Walker</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img-play">
+                            <img src="./img/2.jpg" alt="">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                        </div>
+                        <h5>On My Way<br>
+                            <div class="artist">Alan Walker</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img-play">
+                            <img src="./img/2.jpg" alt="">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                        </div>
+                        <h5>On My Way<br>
+                            <div class="artist">Alan Walker</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img-play">
+                            <img src="./img/2.jpg" alt="">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                        </div>
+                        <h5>On My Way<br>
+                            <div class="artist">Alan Walker</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img-play">
+                            <img src="./img/2.jpg" alt="">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                        </div>
+                        <h5>On My Way<br>
+                            <div class="artist">Alan Walker</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img-play">
+                            <img src="./img/2.jpg" alt="">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                        </div>
+                        <h5>On My Way<br>
+                            <div class="artist">Alan Walker</div>
+                        </h5>
+                    </li>
+                    <li class="songItem">
+                        <div class="img-play">
+                            <img src="./img/2.jpg" alt="">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                        </div>
+                        <h5>On My Way<br>
+                            <div class="artist">Alan Walker</div>
+                        </h5>
+                    </li>
+
+                    <li class="songItem">
+                        <div class="img-play">
+                            <img src="./img/2.jpg" alt="">
+                            <i class="bi playlistPlay bi-play-circle-fill" id="2"></i>
+                        </div>
+                        <h5>On My Way<br>
+                            <div class="artist">Alan Walker</div>
+                        </h5>
+                    </li>
+                    
+                </div>
+            </div>
+            <div class="popular-artists">
+                <div class="h4">
+                    <h4>Popular Artists</h4>
+                    <div class="btn-song">
+                        <i class="bi bi-arrow-left-short"></i>
+                        <i class="bi bi-arrow-right-short"></i>
+                    </div>
+                </div>
+                <div class="item">
+                    <li>
+                        <img src="./img/arjit.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./img/arjit.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./img/arjit.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./img/arjit.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./img/arjit.jpg" alt="">
+                    </li>
+                    <li>
+                        <img src="./img/arjit.jpg" alt="">
+                    </li>
+                </div>
+            </div>
         </div>
 
         <div class="master-play">
