--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <body>
     <header>
       <div class="menu_side">
+        <h6 id="menu_list_active_button">
+          <i class="bi bi-music-note-list"></i>
+        </h6>
         <h1>Playlist</h1>
         <div class="playlist">
           <h4 class="active">
