--- a/arjit.html
+++ b/arjit.html
@@ -240,43 +240,58 @@
           </div>
           <div class="item artist_bx">
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <a href="./arjit.html"><img src="./img/arjit.jpg" alt="" /></a>
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/alan.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/Diljit_Dosanjh.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/atif.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/dhvani.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/akhil.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/guru.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/honey.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/justin-bieber-lede.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/jubin Nautiyal.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/neha.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/armaan-malik.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/arjit.jpg" alt="" />
+              <img src="./img/Badshah-as-.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/images.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/kk.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/zayn-malik.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/Shreya.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/udit-narayan.jpg" alt="" />
             </li>
           </div>
         </div>
