--- a/arjit.html
+++ b/arjit.html
@@ -227,6 +227,56 @@
                 <div class="artist">Alan Walker</div>
               </h5>
             </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="./img/2.jpg" alt="" />
+                <i class="bi playlistPlay bi-play-circle-fill" id="16"></i>
+              </div>
+              <h5>
+                On My Way<br />
+                <div class="artist">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="./img/2.jpg" alt="" />
+                <i class="bi playlistPlay bi-play-circle-fill" id="17"></i>
+              </div>
+              <h5>
+                On My Way<br />
+                <div class="artist">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="./img/2.jpg" alt="" />
+                <i class="bi playlistPlay bi-play-circle-fill" id="18"></i>
+              </div>
+              <h5>
+                On My Way<br />
+                <div class="artist">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="./img/2.jpg" alt="" />
+                <i class="bi playlistPlay bi-play-circle-fill" id="19"></i>
+              </div>
+              <h5>
+                On My Way<br />
+                <div class="artist">Alan Walker</div>
+              </h5>
+            </li>
+            <li class="songItem">
+              <div class="img_play">
+                <img src="./img/2.jpg" alt="" />
+                <i class="bi playlistPlay bi-play-circle-fill" id="20"></i>
+              </div>
+              <h5>
+                On My Way<br />
+                <div class="artist">Alan Walker</div>
+              </h5>
+            </li>
           </div>
         </div>
 
