--- a/arjit.html
+++ b/arjit.html
@@ -18,6 +18,9 @@
   <body>
     <header>
       <div class="menu_side">
+        <h6 id="menu_list_active_button">
+          <i class="bi bi-music-note-list"></i>
+        </h6>
         <h1>Playlist</h1>
         <div class="playlist">
           <h4 class="active">
@@ -123,6 +126,17 @@
           <div class="search">
             <i class="bi bi-search"></i>
             <input type="text" placeholder="Search Music..." />
+            <div class="search_results">
+              <!-- <a href="" class="card">
+                            <img src="./img/1.jpg" alt="">
+                            <div class="content">
+                                On My Way
+                                <div class="artist">
+                                    Alan Walker
+                                </div>
+                            </div>
+                        </a> -->
+            </div>
           </div>
           <div class="user">
             <a href="./login.html">
@@ -135,7 +149,7 @@
         </nav>
 
         <div class="content">
-          <h1>Arjit Singh</h1>
+          <h1>Alan Walker-Fade</h1>
           <p>
             You were the shadow to my light did you feel us Another start you
             fade <br />
@@ -227,6 +241,7 @@
                 <div class="artist">Alan Walker</div>
               </h5>
             </li>
+
             <li class="songItem">
               <div class="img_play">
                 <img src="./img/2.jpg" alt="" />
@@ -237,6 +252,7 @@
                 <div class="artist">Alan Walker</div>
               </h5>
             </li>
+
             <li class="songItem">
               <div class="img_play">
                 <img src="./img/2.jpg" alt="" />
@@ -247,6 +263,7 @@
                 <div class="artist">Alan Walker</div>
               </h5>
             </li>
+
             <li class="songItem">
               <div class="img_play">
                 <img src="./img/2.jpg" alt="" />
@@ -257,6 +274,7 @@
                 <div class="artist">Alan Walker</div>
               </h5>
             </li>
+
             <li class="songItem">
               <div class="img_play">
                 <img src="./img/2.jpg" alt="" />
@@ -267,6 +285,7 @@
                 <div class="artist">Alan Walker</div>
               </h5>
             </li>
+
             <li class="songItem">
               <div class="img_play">
                 <img src="./img/2.jpg" alt="" />
